2003-04-24  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c: 
	Don't mark the copyright string as translatable and use the
	correct Unicode character for the copyright symbol.
	
2003-04-24  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Use the correct variables when setting the pattern.

	* src/sj-extracting.c:
	Fix a minor logic bug in the pattern parser, and add a break.

2003-04-24  Ross Burton  <ross@burtonini.com>

	* .cvsignore:
	Ignore the generated spec file.

	* src/sj-extracting.c:
	Instead of hardcoding the output filename, use a GConf key and
	pattern subsitution.

	* src/sj-prefs.c:
	Nicer path selection dialog title.

	* src/sound-juicer.h:
	Make more fields public.
	
	* data/sound-juicer.schemas.in:
	* src/sj-main.c:
	* src/sj-extractor.c:
	* src/sj-extractor.h:
	Allow the user to set the paranoia level with a GConf key. Patch
	from foser@gentoo.org.

	* TODO:
	Updated.

2003-04-22  Christian Neumair  <chris@gnome-de.org>

	* configure.in: Added "de" (German) to ALL_LINGUAS.

2003-04-22  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* sound-juicer.spec.in:
	use more macros.

2003-04-22  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	When showing the base path file selector, set the default path to
	the current base path.

2003-04-22  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Add the UI to set the base path for ripped files.

	* TODO:
	Updated.

	* sound-juicer.spec.in:
	Added a RPM spec file, thanks to Ronald Bultje.

	* configure.in:
	Generate the spec file, and change gstreamer element check errors
	to warnings.

2003-04-11  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* tests/Makefile.am:
	Rationalize the variable use so that I use the variables I should
	be using. Upshot is that it builds on automake 1.6 and 1.7.
	
2003-04-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* data/sound-juicer.glade:
	Put back gnome requirement.

2003-04-11  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am: