@@ -1,3 +1,14 @@
+2003-04-25  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.[ch]:
+	Added sj_extractor_get_new_error() to see if the construction of
+	SjExtractor worked or failed.
+
+	* NEWS:
+	* README:
+	* TODO:
+	Updated.
+
 2003-04-24  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-about.c: 
